cakes-manager-server with rest api
