# cake-manager-server/src/main/java/com/waracle/cakemgr/service/FileStorageService.java
@@ -1,16 +1,14 @@
 package com.waracle.cakemgr.service;
 
-import org.springframework.core.io.Resource;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.nio.file.Path;
-import java.util.Optional;
 import java.util.stream.Stream;
 
 public interface FileStorageService {
     Path save(MultipartFile file) ;
 
-    Optional<Resource> load(String filename);
+    byte[] load(String filename);
 
     void deleteAll();
 
